集众保理广告管理

--- a/web/application/admin/view/layout/left.html
+++ b/web/application/admin/view/layout/left.html
@@ -33,7 +33,7 @@
                     'managerKey' => '运营管理',
                     'managerUrl' => 'javascript:;',
                     'managerIcon'=> 'fa-dashboard',
-                    'managerVal' => [['name'=>'Banner管理','url'=>url('admin/banner/index'),'icon'=>'fa-image'],['name'=>'公告管理','url'=>url('admin/notice/index'),'icon'=>'fa-bell']]
+                    'managerVal' => [['name'=>'Banner管理','url'=>url('admin/banner/index'),'icon'=>'fa-image'],['name'=>'广告图管理','url'=>url('admin/banner/adIndex'),'icon'=>'fa-image'],['name'=>'公告管理','url'=>url('admin/notice/index'),'icon'=>'fa-bell']]
                 ],[
                     'managerKey' => '商品订单',
                     'managerUrl' => 'javascript:;',
@@ -48,6 +48,11 @@
                     'managerKey' => '金融服务',
                     'managerIcon'=> 'fa-money',
                     'managerUrl' => url('admin/service/index'),
+                    'managerVal' => []
+                ],[
+                    'managerKey' => '集众保理',
+                    'managerIcon'=> 'fa-money',
+                    'managerUrl' => url('admin/factoring/index'),
                     'managerVal' => []
                 ],[
                     'managerKey' => '商品管理',
