'优化菜单以及分类规格'

--- a/web/application/admin/view/layout/left.html
+++ b/web/application/admin/view/layout/left.html
@@ -54,9 +54,16 @@
                     'managerIcon'=> 'fa-money',
                     'managerUrl' => url('admin/factoring/index'),
                     'managerVal' => []
-                ],[
+                ],
+                [
+                 'managerKey' => '投诉建议',
+                 'managerIcon'=> 'fa-feed',
+                 'managerUrl' => url('admin/suggestion/index'),
+                  'managerVal' => []
+                ],
+                [
                     'managerKey' => '商品管理',
-                    'managerIcon'=> 'fa-feed',
+                    'managerIcon'=> 'fa-inbox',
                     'managerUrl' => '#',
                     'managerVal' => [['name'=>'新增商品','url'=>url('admin/product/create'),'icon'=>'fa-database'],['name'=>'草稿','url'=>url('admin/product/listDraft'),'icon'=>'fa-database'],['name'=>'待审核','url'=>url('admin/product/listPending'),'icon'=>'fa-database'],['name'=>'已审核','url'=>url('admin/product/listpass'),'icon'=>'fa-database']]
                 ],[
@@ -79,8 +86,8 @@
                     'managerVal' => [['name'=>'全站商品分类','url'=>url('admin/product_category/index'),'icon'=>'fa-cubes']]
                 ],[
                     'managerKey' => '商品管理',
-                    'managerIcon'=> 'fa-feed',
-                    'managerUrl' => url('admin/suggestion/index'),
+                    'managerIcon'=> 'fa-inbox',
+                    'managerUrl' => '#',
                     'managerVal' => [['name'=>'待审核','url'=>url('admin/product/listPending'),'icon'=>'fa-database'],['name'=>'已审核','url'=>url('admin/product/listpass'),'icon'=>'fa-database']]
                 ],[
                     'managerKey' => '系统菜单',
