'修复php方法不支持'

--- a/web/application/admin/view/report/supplier.html
+++ b/web/application/admin/view/report/supplier.html
@@ -73,7 +73,7 @@
                                 <th width="150px">日期</th>
                                 <th>供应商名称</th>
                                 <th>交易订单数</th>
-                                <th>交易金额</th>
+                                <th>交易金额(¥)</th>
                             </tr>
                             </thead>
                             <tbody>
