--- a/web/application/admin/view/report/trade.html
+++ b/web/application/admin/view/report/trade.html
@@ -83,8 +83,8 @@
                                 <th>商品名称</th>
                                 <th>商品规格</th>
                                 <th>交易数量</th>
-                                <th>交易金额</th>
-                                <th>平均交易单价</th>
+                                <th>交易金额(¥)</th>
+                                <th>平均交易单价(¥)</th>
                             </tr>
                             </thead>
                             <tbody>
