广告图菜单选中

--- a/web/application/admin/view/banner/ad_index.html
+++ b/web/application/admin/view/banner/ad_index.html
@@ -290,7 +290,7 @@
 <script type="text/javascript" src="__STATIC__/js/plugins/bootstrapvalidator/js/bootstrapValidator.js"></script>
 <script type="text/javascript" src="__STATIC__/js/admin/banner.js"></script>
 <script type="text/javascript">
-    var url = '{:url("admin/banner/index")}';
+    var url = '{:url("admin/Banner/adIndex")}';
     $('a[href="'+url+'"]').addClass('active');
     $('a[href="'+url+'"]').parent().parent().parent().addClass('menu-open');
 </script>
