'修改商品详情'

--- a/web/application/api/view/index/goods_detail.html
+++ b/web/application/api/view/index/goods_detail.html
@@ -8,10 +8,13 @@
         body{margin: 0 auto;padding-top: 20px; font-family:"微软雅黑",Arial;position: relative;word-break:break-all;max-width: 640px;min-width: 320px;background: #ededed;}
         .article-title h1{font-size: 1.3em;margin-bottom: 10px;padding: 0 10px;text-align: center;}
         .article-content{font-size: 1.1em;padding: 10px 10px 30px;color: #000000;}
+        .article-content  img{
+            max-width: 100%;
+        }
      </style>
 </head>
 <body>
-<div class="article-content">
+<div class="article-content" >
     {$detail}
 </div>
 </body>
