--- a/web/application/admin/view/report/trade.html
+++ b/web/application/admin/view/report/trade.html
@@ -68,7 +68,7 @@
                             </form>
                         </div>
                         <div class="col-md-2">
-                            <a class="btn btn-primary pull-right"  target="_blank"  href="{:url('admin/report/buyer_export',['start'=>$start,'end'=>$end])}" >导出</a>
+                            <a class="btn btn-primary pull-right"  target="_blank"  href="{:url('admin/report/trade_export',['start'=>$start,'end'=>$end,'title'=>$title,'sku'=>$sku])}" >导出</a>
                         </div>
                     </div>
 
