--- a/web/application/admin/view/product_category/create.html
+++ b/web/application/admin/view/product_category/create.html
@@ -46,6 +46,22 @@
                                     </div>
                                 </div>
                                 <div class="form-inline form-group">
+                                    <label  class="col-md-2 pull-right">APP/H5图标</label>
+                                    <div>
+                                        <input id="add-file" name="file" type="file" data-show-caption="true">
+                                        <input  type="hidden" name="icon_h5" id="add-upload-file"  value="" />
+                                        <p class="help-block2">支持jpg、jpeg、png格式，大小不超过2.0M</p>
+                                    </div>
+                                </div>
+                                <div class="form-inline form-group">
+                                    <label  class="col-md-2 pull-right">Web图标</label>
+                                    <div>
+                                        <input id="add-web-file" name="file" type="file" data-show-caption="true">
+                                        <input  type="hidden" name="icon_web" id="add-web-upload-file"  value="" />
+                                        <p class="help-block2">支持jpg、jpeg、png格式，大小不超过2.0M</p>
+                                    </div>
+                                </div>
+                                <div class="form-inline form-group">
                                     <label  class="col-md-2 pull-right">排序</label>
                                     <input type="number" name="sequence" min="0" class="form-control" value="0" placeholder="排序">
                                 </div>
@@ -84,7 +100,63 @@
     var url = '{:url("admin/product_category/index")}';
     $('a[href="'+url+'"]').addClass('active');
     $('a[href="'+url+'"]').parent().parent().parent().addClass('menu-open');
+    $("#add-file").fileinput({
+        language: 'zh', //设置语言
+        uploadUrl: '?s=admin/file/upload',  //上传地址
+        showUpload: true, //是否显示上传按钮
+        showRemove:true,
+        dropZoneEnabled: false,
+        showCaption: true,//是否显示标题
+        allowedPreviewTypes: ['image'],
+        allowedFileTypes: ['image'],
+        allowedFileExtensions:  ['jpg', 'png'],
+        maxFileSize : 2048,
+        maxFileCount: 1,
+        uploadExtraData: function(previewId, index) {   //额外参数的关键点
+            var obj = {};
+            obj.type = 'type_icon';
+            return obj;
+        }
+    });
+    $('#add-file').on("fileuploaded", function(event, data) {
+        if(data.response) {
+            $('#add-upload-file').val(data.response.data.filename);
+            $('#add-upload-file').closest('.form-group').removeClass('has-error');
+            $('#add-upload-file').closest('.form-group').find('.help-block').hide();
+        }
+    });
+    $('#add-file').on('fileclear', function(event, id) {
+        $('#add-upload-file').val('');
+    });
 
+    $("#add-web-file").fileinput({
+        language: 'zh', //设置语言
+        uploadUrl: '?s=admin/file/upload',  //上传地址
+        showUpload: true, //是否显示上传按钮
+        showRemove:true,
+        dropZoneEnabled: false,
+        showCaption: true,//是否显示标题
+        allowedPreviewTypes: ['image'],
+        allowedFileTypes: ['image'],
+        allowedFileExtensions:  ['jpg', 'png'],
+        maxFileSize : 2048,
+        maxFileCount: 1,
+        uploadExtraData: function(previewId, index) {   //额外参数的关键点
+            var obj = {};
+            obj.type = 'type_icon';
+            return obj;
+        }
+    });
+    $('#add-web-file').on("fileuploaded", function(event, data) {
+        if(data.response) {
+            $('#add-web-upload-file').val(data.response.data.filename);
+            $('#add-web-upload-file').closest('.form-group').removeClass('has-error');
+            $('#add-web-upload-file').closest('.form-group').find('.help-block').hide();
+        }
+    });
+    $('#add-web-file').on('fileclear', function(event, id) {
+        $('#add-web-upload-file').val('');
+    });
 
     $("#add-form").bootstrapValidator({
         excluded:[":disabled"],
@@ -100,7 +172,7 @@
                     stringLength: {
                         min: 2,
                         max: 20,
-                        message: '最大长度为20个字符'
+                        message: '长度为2-20个字符'
                     },
                 }
             },
