--- a/web/application/admin/view/product_category/edit.html
+++ b/web/application/admin/view/product_category/edit.html
@@ -36,7 +36,7 @@
                             <div class="card-body">
                                 <div class="form-inline form-group">
                                     <label for="" class="col-md-2 pull-right">分类名称</label>
-                                    <input type="text" class="form-control" name="name" value="{$row.name}" maxlength="50" placeholder="">
+                                    <input type="text" class="form-control" name="name" value="{$row.name}" maxlength="20" placeholder="">
                                 </div>
                                 <div class="form-inline form-group">
                                     <label  class="col-md-2 pull-right">上级分类</label>
@@ -48,6 +48,22 @@
                                             {/foreach}
                                         </select>
                                         <p class="help-block">如果不选择上级分类，默认为顶级分类</p>
+                                    </div>
+                                </div>
+                                <div class="form-inline form-group">
+                                    <label  class="col-md-2 pull-right">APP/H5图标:</label>
+                                    <div class="">
+                                        <input id="edit-file" name="file" type="file" data-show-caption="true">
+                                        <input  type="hidden" name="icon_h5" id="edit-upload-file"  value="{$row.icon_h5}"  data-path="{$preview_icon_h5}"/>
+                                        <p class="help-block">支持jpg、jpeg、png格式，大小不超过2.0M</p>
+                                    </div>
+                                </div>
+                                <div class="form-inline form-group">
+                                    <label  class="col-md-2 pull-right">Web图标:</label>
+                                    <div class="">
+                                        <input id="edit-web-file" name="file" type="file" data-show-caption="true">
+                                        <input  type="hidden" name="icon_web" id="edit-web-upload-file"  value="{$row.icon_web}"  data-path="{$preview_icon_web}"/>
+                                        <p class="help-block">支持jpg、jpeg、png格式，大小不超过2.0M</p>
                                     </div>
                                 </div>
                                 <div class="form-inline form-group">
@@ -94,6 +110,74 @@
     $('a[href="'+url+'"]').addClass('active');
     $('a[href="'+url+'"]').parent().parent().parent().addClass('menu-open');
 
+    var imgPath = $('#edit-upload-file').data('path');
+    var imgWebPath = $('#edit-web-upload-file').data('path');
+    $("#edit-file").fileinput({
+        language: 'zh', //设置语言
+        uploadUrl: '?s=admin/file/upload',  //上传地址
+        showUpload: true, //是否显示上传按钮
+        showRemove:true,
+        dropZoneEnabled: false,
+        showCaption: true,//是否显示标题
+        allowedPreviewTypes: ['image'],
+        allowedFileTypes: ['image'],
+        allowedFileExtensions:  ['jpg', 'png'],
+        maxFileSize : 2048,
+        maxFileCount: 1,
+        uploadExtraData: function(previewId, index) {   //额外参数的关键点
+            var obj = {};
+            obj.type = 'type_icon';
+            return obj;
+        },
+        initialPreview: [
+            "<img width='150px' height='150px' src='"+imgPath+"' class='file-preview-image' alt='' title=''>"
+        ],
+        previewSettings: {
+            image: {width: "200", height: "200"},
+        },
+    });
+    $('#edit-file').on("fileuploaded", function(event, data) {
+        if(data.response){
+            $('#edit-upload-file').val(data.response.data.filename);
+        }
+    });
+    $('#edit-file').on('filecleared', function(event) {
+        $('#edit-upload-file').val('');
+    });
+
+    $("#edit-web-file").fileinput({
+        language: 'zh', //设置语言
+        uploadUrl: '?s=admin/file/upload',  //上传地址l
+        showUpload: true, //是否显示上传按钮
+        showRemove:true,
+        dropZoneEnabled: false,
+        showCaption: true,//是否显示标题
+        allowedPreviewTypes: ['image'],
+        allowedFileTypes: ['image'],
+        allowedFileExtensions:  ['jpg', 'png'],
+        maxFileSize : 2048,
+        maxFileCount: 1,
+        uploadExtraData: function(previewId, index) {   //额外参数的关键点
+            var obj = {};
+            obj.type = 'type_icon';
+            return obj;
+        },
+        initialPreview: [
+            "<img width='150px' height='150px' src='"+imgWebPath+"' class='file-preview-image' alt='' title=''>"
+        ],
+        previewSettings: {
+            image: {width: "200", height: "200"},
+        },
+    });
+    $('#edit-web-file').on("fileuploaded", function(event, data) {
+        if(data.response){
+            $('#edit-web-upload-file').val(data.response.data.filename);
+        }
+    });
+    $('#edit-web-file').on('filecleared', function(event) {
+        $('#edit-web-upload-file').val('');
+    });
+
     $("#edit-form").bootstrapValidator({
         excluded:[":disabled"],
         live: 'disabled',
@@ -108,7 +192,7 @@
                     stringLength: {
                         min: 2,
                         max: 20,
-                        message: '最大长度为20个字符'
+                        message: '长度为2-20个字符'
                     },
                 }
             }
