--- a/web/application/admin/view/company_certification/view.html
+++ b/web/application/admin/view/company_certification/view.html
@@ -32,12 +32,8 @@
                                 <span class="">{$row.company_name}</span>
                             </div>
                             <div class="form-inline form-group">
-                                <label for="" class="col-md-3">注册类型</label>
-                                <span class="">{$row.reg_role}</span>
-                            </div>
-                            <div class="form-inline form-group">
                                 <label for="" class="col-md-3">企业性质</label>
-                                <span class="">{$row.ent_property}</span>
+                                <span class="">{$row.enterprise_type}</span>
                             </div>
                             <div class="form-inline form-group">
                                 <label for="" class="col-md-3">注册资金</label>
@@ -53,70 +49,58 @@
                             </div>
                             <div class="form-inline form-group">
                                 <label for="" class="col-md-3">详细地址</label>
-                                <span class="">{$row.detail_address}</span>
+                                <span class="">{$row.address}</span>
                             </div>
                             <div class="form-inline form-group">
                                 <label for="" class="col-md-3">公司固话</label>
-                                <span class="">{$row.ent_phone}</span>
+                                <span class="">{$row.telephone}</span>
                             </div>
                             <div class="form-inline form-group">
                                 <label for="" class="col-md-3">联系人</label>
-                                <span class="">{$row.contact_point}</span>
+                                <span class="">{$row.contacts}</span>
                             </div>
                             <div class="form-inline form-group">
                                 <label for="" class="col-md-3">联系手机</label>
-                                <span class="">{$row.contact_mobile}</span>
+                                <span class="">{$row.contact_phone}</span>
                             </div>
                             <div class="form-inline form-group">
                                 <label for="" class="col-md-3">审核状态</label>
-                                <span class="">{$row.status == 1 ? '待审核' : ($row.status == 2 ? '已通过' : '已拒绝')}</span>
+                                <span class="">{$row.state == 1 ? '待审核' : ($row.state == 2 ? '已通过' : '已拒绝')}</span>
                             </div>
-                            {if $row.status == 3}
+                            {if $row.state == 3}
                             <div class="form-inline form-group">
                                 <label for="" class="col-md-3">拒绝原因</label>
-                                <span class="">{$row.refuse_reason}</span>
+                                <span class="">{$row.description}</span>
                             </div>
                             {/if}
-                            {if $row.permits_accounts}
+                            {if $row.opening_permit_uri}
                             <div class="form-inline form-group">
                                 <label for="" class="col-md-3">开户许可证</label>
-                                <a href="{$row.permits_accounts}" target="_blank" ><img src="{$row.permits_accounts}"  width="150px" height="150px" /></a>
+                                <a href="{$row.opening_permit_uri}" target="_blank" ><img src="{$row.opening_permit_uri}"  width="150px" height="150px" /></a>
                             </div>
                             {/if}
-                            {if $row.business_license}
+                            {if $row.business_licence_uri}
                             <div class="form-inline form-group">
                                 <label for="" class="col-md-3">营业执照副本</label>
-                                <a href="{$row.business_license}" target="_blank" ><img src="{$row.business_license}"  width="150px" height="150px" /></a>
+                                <a href="{$row.business_licence_uri}" target="_blank" ><img src="{$row.business_licence_uri}"  width="150px" height="150px" /></a>
                             </div>
                             {/if}
-                            {if $row.legal_identity_card}
+                            {if $row.legal_repres_id_card_uri}
                             <div class="form-inline form-group">
                                 <label for="" class="col-md-3">法人身份证</label>
-                                <a href="{$row.legal_identity_card}" target="_blank" ><img src="{$row.legal_identity_card}"  width="150px" height="150px" /></a>
+                                <a href="{$row.legal_repres_id_card_uri}" target="_blank" ><img src="{$row.legal_repres_id_card_uri}"  width="150px" height="150px" /></a>
                             </div>
                             {/if}
-                            {if $row.legal_identity_card}
+                            {if $row.power_attorney_uri}
                             <div class="form-inline form-group">
                                 <label for="" class="col-md-3">委托授权书</label>
-                                <a href="{$row.power_attorney}" target="_blank" ><img src="{$row.power_attorney}"  width="150px" height="150px" /></a>
+                                <a href="{$row.power_attorney_uri}" target="_blank" ><img src="{$row.power_attorney_uri}"  width="150px" height="150px" /></a>
                             </div>
                             {/if}
-                            {if $row.agent_identity_card}
+                            {if $row.agent_id_card_uri}
                             <div class="form-inline form-group">
                                 <label for="" class="col-md-3">代办人身份证</label>
-                                <a href="{$row.agent_identity_card}" target="_blank" ><img src="{$row.agent_identity_card}"  width="150px" height="150px" /></a>
-                            </div>
-                            {/if}
-                            {if $row.org_structure_code_permits}
-                            <div class="form-inline form-group">
-                                <label for="" class="col-md-3">机构代码证</label>
-                                <a href="{$row.org_structure_code_permits}" target="_blank" ><img src="{$row.agent_identity_card}"  width="150px" height="150px" /></a>
-                            </div>
-                            {/if}
-                            {if $row.tax_registration_cert}
-                            <div class="form-inline form-group">
-                                <label for="" class="col-md-3">税务登记证</label>
-                                <a href="{$row.tax_registration_cert}" target="_blank" ><img src="{$row.tax_registration_cert}"  width="150px" height="150px" /></a>
+                                <a href="{$row.agent_id_card_uri}" target="_blank" ><img src="{$row.agent_id_card_uri}"  width="150px" height="150px" /></a>
                             </div>
                             {/if}
                         </div>
@@ -129,6 +113,6 @@
 
 {include file="layout/footer" title="$title" keywords="" /}
 <script type="text/javascript">
-    var url = '{:url("admin/certification/index")}';
-    $('a[href="'+url+'"]').addClass('active');
+    var url = '{:url("admin/company_certification/index")}';
+    $('.nav-sidebar').find('a[href="'+url+'"]').addClass('active');
 </script>
